<resources>
    <string name="app_name">WeatherApp</string>
    <string name="city">City</string>
    <string name="name">Name</string>
    <string name="temperature">Temperature</string>
    <string name="pressure">Pressure</string>
    <string name="sunrise">SunRise</string>
    <string name="sunset">Sunset</string>
    <string name="date">01.01</string>
    <string name="description">Description</string>
    <string name="example_date">01:01  01.01</string>
    <string name="accessibility_mode">Accessibility Mode</string>
</resources>