<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewmodel"
            type="com.example.weatherapp.viewmodel.WeatherViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
        <EditText
            android:id="@+id/editTextCityName"
            android:text="@={viewmodel.cityName}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="62dp"
            android:layout_marginEnd="128dp"
            android:hint="@string/city"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button"
            android:onClick="@{() -> viewmodel.getWeather()}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginEnd="16dp"
            android:text="Button"
            app:layout_constraintBottom_toBottomOf="@+id/editTextCityName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editTextCityName"
            app:layout_constraintTop_toTopOf="@+id/editTextCityName"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textViewCityName"
            android:hint="@string/name"
            android:text="@{viewmodel.currentWeather.name}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="102dp"
            android:layout_marginBottom="106dp"
            app:layout_constraintBottom_toTopOf="@+id/textViewTemperature"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextCityName" />

        <TextView
            android:id="@+id/textViewTemperature"
            android:hint="@string/temperature"
            app:temp="@{viewmodel.currentWeather.main.temp}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="177dp"
            android:layout_marginEnd="177dp"
            android:layout_marginBottom="480dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCityName" />

        <TextView
            android:id="@+id/textViewPressure"
            android:hint="@string/pressure"
            app:pressure="@{viewmodel.currentWeather.main.pressure}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="183dp"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="172dp"
            android:layout_marginBottom="363dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTemperature" />

        <TextView
            android:id="@+id/textViewSunRise"
            app:time="@{viewmodel.currentWeather.sys.sunrise}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="181dp"
            android:layout_marginTop="39dp"
            android:layout_marginEnd="179dp"
            android:layout_marginBottom="305dp"
            android:hint="@string/sunrise"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewPressure" />

        <TextView
            android:id="@+id/textViewSunSet"
            app:time="@{viewmodel.currentWeather.sys.sunset}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="184dp"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="184dp"
            android:layout_marginBottom="248dp"
            android:hint="@string/sunset"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSunRise"
            />

        <TextView
            android:id="@+id/textViewDate"
            app:date="@{viewmodel.currentWeather.dt}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="183dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="185dp"
            android:layout_marginBottom="180dp"
            android:hint="@string/date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSunSet" />

        <TextView
            android:id="@+id/textDescription"
            android:text="@{viewmodel.currentWeather.weather[0].description}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="170dp"
            android:layout_marginTop="39dp"
            android:layout_marginEnd="170dp"
            android:layout_marginBottom="122dp"
            android:hint="@string/description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDate" />

        <ImageView
            android:id="@+id/imageView"
            app:image="@{viewmodel.currentWeather.weather[0].icon}"
            android:layout_width="134dp"
            android:layout_height="152dp"
            android:layout_marginBottom="472dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewCityName"
            app:layout_constraintTop_toBottomOf="@+id/button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>